# iqb

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  cloudbuild.yaml  pyproject.toml
analysis/: 00-template.ipynb  README.md  pyproject.toml
analysis/tests/: __init__.py  notebook_test.py
data/: .gitignore  README.md  ad_2025_10.json  ae_2024_10.json  ae_2025_10.json  af_2024_10.json  ag_2024_10.json  ag_2025_10.json  al_2024_10.json  al_2025_10.json  am_2024_10.json  am_2025_10.json  ao_2024_10.json  ar_2024_10.json  ar_2025_10.json  at_2024_10.json  at_2025_10.json  au_2024_10.json  au_2025_10.json  aw_2024_10.json  ax_2024_10.json  az_2024_10.json  az_2025_10.json  ba_2024_10.json  ba_2025_10.json  bb_2024_10.json  bd_2024_10.json  bd_2025_10.json  be_2024_10.json  be_2025_10.json  bg_2024_10.json  bg_2025_10.json  bh_2025_10.json  bi_2024_10.json  bj_2024_10.json  bm_2024_10.json  bm_2025_10.json  bo_2024_10.json  bo_2025_10.json  bq_2025_10.json  (+260 more)
data/cache/: .gitignore
data/cache/v0/: ad_2024_10.json  ad_2025_10.json  ae_2024_10.json  ae_2025_10.json  af_2024_10.json  af_2025_10.json  ai_2024_10.json  ai_2025_10.json  al_2024_10.json  al_2025_10.json  am_2024_10.json  am_2025_10.json  ao_2024_10.json  ao_2025_10.json  aq_2024_10.json  aq_2025_10.json  ar_2024_10.json  ar_2025_10.json  as_2024_10.json  as_2025_10.json  at_2024_10.json  at_2025_10.json  au_2024_10.json  au_2025_10.json  aw_2025_10.json  ax_2024_10.json  ax_2025_10.json  az_2024_10.json  az_2025_10.json  ba_2024_10.json  ba_2025_10.json  bb_2025_10.json  bd_2024_10.json  bd_2025_10.json  be_2024_10.json  be_2025_10.json  bf_2024_10.json  bf_2025_10.json  bg_2024_10.json  bg_2025_10.json  (+362 more)
data/state/ghremote/: manifest.json
data/tests/: generate_data_test.py
docs/internals/: 00-queries.md  01-pipeline.ipynb  02-pipeline-cache.ipynb  README.md  pyproject.toml
docs/internals/tests/: __init__.py  notebook_api_test.py
prototype/: .gitignore  Dockerfile  Home.py  README.md  app_state.py  pyproject.toml  session_state.py
prototype/cache/v0/: ae_2025_10.json  ag_2024_10.json  ag_2025_10.json  ai_2025_10.json  al_2025_10.json  am_2024_10.json  am_2025_10.json  ao_2025_10.json  ar_2025_10.json  as_2024_10.json  as_2025_10.json  at_2024_10.json  at_2025_10.json  au_2025_10.json  aw_2024_10.json  aw_2025_10.json  ax_2025_10.json  az_2024_10.json  az_2025_10.json  ba_2025_10.json  bb_2024_10.json  bb_2025_10.json  bd_2024_10.json  bd_2025_10.json  be_2024_10.json  be_2025_10.json  bg_2024_10.json  bg_2025_10.json  bh_2024_10.json  bi_2025_10.json  bj_2025_10.json  bl_2025_10.json  bm_2025_10.json  bn_2024_10.json  bo_2024_10.json  bo_2025_10.json  bq_2024_10.json  (+293 more)
prototype/natural_earth/: extract_country_geojson.py
prototype/pages/: Country_Compare.py  IQB_Map.py
prototype/tests/: __init__.py  calculation_utils_test.py  test_app.py  test_app_state.py
prototype/utils/: calculation_utils.py  constants.py  data_utils.py
prototype/visualizations/: __init__.py  sunburst_data.py  sunburst_figure.py  ui_components.py
tutorial/: 00-queries.md  01-pipeline.ipynb  02-pipeline-cache.ipynb  03-research.ipynb  pyproject.toml
(+494 files in other folders)
