[project]
name = "iqb-analysis"
version = "0.1.0"
description = "Research notebooks for IQB sensitivity and comparative analysis"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.0",
    "notebook>=7.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.17.0",
    "matplotlib>=3.9.0",
    "mlab-iqb",
]

[tool.uv.sources]
mlab-iqb = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "nbconvert>=7.16.0",
    "nbformat>=5.10.0",
]
